first pass at SS4 upgrade

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,7 +1,7 @@
-SiteConfig:
+SilverStripe\SiteConfig\SiteConfig:
   extensions:
-    - SiteConfigFacebookImageExtension
+    - WT\FacebookImage\SiteConfigFacebookImageExtension
 
 Page:
   extensions:
-    - PageFacebookImageExtension
+    - WT\FacebookImage\PageFacebookImageExtension
