--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
 		}
 	],
 	"require": {
-		"composer/installers": "~1.0"
+		"composer/installers": "~1.0",
+		"silverstripe/framework": "^4.0.0"
 	}
 }
