--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "heyday/silverstripe-facebookimage",
 	"type": "silverstripe-module",
 	"description": "Provides an Image Field for use when sharing pages on facebook",
+	"type": "silverstripe-vendormodule",
 	"authors": [
 		{
 			"name": "Glenn Bautista",
