--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		}
 	],
 	"require": {
-		"composer/installers": "~1.0",
-		"silverstripe/framework": "^4.0.0"
+		"composer/installers": "^1.0",
+		"silverstripe/framework": "^4.0.0 || ^5.0.0"
 	}
 }
